# ServerManager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  gce.cpp  gce.h  main.cpp  vcpkg.json
.github/workflows/: ci.yml  vcpkg-cache.yaml
